--- a/style.css
+++ b/style.css
@@ -45,3 +45,20 @@ h6 {
   font-weight: 400;
   margin: 1rem 0;
 }
+a {
+  color: inherit;
+}
+.gl-padding {
+  padding:.8rem 1.6rem;
+}
+.gl-padding-32 {
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
+}
+.gl-padding-top-32 {
+ padding-top: 3.2rem;
+}
+.gl-image {
+ max-width: 100%;
+ height: auto;
+}
