--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*colori e variabili*/
 
 :root {
-    --color-black:hsl(0,0,0);
+    --color-black:#000;
     --color-pale-grey: hsl(0,0,95%);
-    --color-white: hsl(0,0,100%);
+    --color-white: #fff;
     --color-grey: hsl(0,0,62%);
     --font-family-primary: "Open Sans";
 }
@@ -48,16 +48,7 @@ h6 {
 a {
   color: inherit;
 }
-.gl-padding {
-  padding:.8rem 1.6rem;
-}
-.gl-padding-32 {
-  padding-top: 3.2rem;
-  padding-bottom: 3.2rem;
-}
-.gl-padding-top-32 {
- padding-top: 3.2rem;
-}
+
 .gl-image {
  max-width: 100%;
  height: auto;
@@ -111,5 +102,79 @@ a {
   display: grid;
   min-height: 50vw;
   max-height: 70vh;
-  background-image: ;
+  background-image: url(immagini/logo.jpeg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  margin-top: 30px;
+}
+
+/*Sezione progetto*/
+
+.gl-project {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.gl-portfolio-img {
+  width: 100%;
+}
+
+.gl-display-container {
+  position: relative;
+}
+
+.gl-display-topleft {
+  position: absolute;
+}
+
+/*Utility class*/
+
+.gl-center {
+  text-align: center;
+}
+.gl-text-balck {
+  color: var(--color-black);
+}
+.gl-black {
+  background-color: var(--color-black);
+  color:var(--color-white);
+}
+
+.gl-opacity-min {
+  opacity: 0.75;
+}
+
+.gl-padding {
+  padding:.8rem 1.6rem;
+}
+
+.gl-padding-32 {
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
+}
+
+.gl-padding-top-32 {
+ padding-top: 3.2rem;
+}
+
+.gl-content {
+  margin-left: auto;
+  margin-right: auto;
+} 
+
+.gl-container {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gl-container-wide {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gl-grid {
+  display: grid;
+  gap: 1rem;
 }
