--- a/style.css
+++ b/style.css
@@ -211,6 +211,16 @@ a {
  box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(217 19% 35% / 0.25);
 }
 
+/*Sezione Footer*/
+
+footer{
+ padding: 3rem;
+} 
+
+footer a:hover{
+ color:var(--color-grey)
+}
+
 /*Utility class*/
 
 .bg-primary {
